--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "preview": "rsbuild preview"
   },
   "dependencies": {
+    "apexcharts": "^3.48.0",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "^6.22.3",
+    "react-select": "^5.8.0"
   },
   "devDependencies": {
     "@rsbuild/core": "^0.5.7",
