--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "apexcharts": "^3.48.0",
     "react": "^18.2.0",
+    "react-accessible-accordion": "^5.0.0",
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
